# qllm

./: CMakeLists.txt  README.md  chatsession.h  chatsmodel.cpp  mainwindow.cpp  messageitem.h  modelmanager.h  modelmanagerwidgetitem.h  modelmanagerwidgetitem.ui  modelscombobox.cpp  modelscombobox.h  settingsdialog.h  settingsdialog.ui
src/: chatsession.cpp  chatsmodel.cpp  chatsmodel.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  messageitem.cpp  messageitem.ui  modelmanager.cpp  modelmanagerwidgetitem.cpp  resources.qrc  settingsdialog.cpp
src/qml/: main.qml
src/stylesheets/: chats.css  main.css
